--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "babel-loader": "^8.2.5",
+    "bootstrap": "^5.1.3",
+    "dotenv": "^16.0.1",
+    "mini-css-extract-plugin": "^2.6.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.52.1",
     "web-vitals": "^2.1.4",
     "webpack": "^5.72.1",
     "webpack-cli": "^4.9.2"
   },
   "scripts": {
-    "start": "webpack serve --config ./webpack.config.js --mode development",
+    "start": "webpack serve --config ./webpack.config.js --env development --mode development",
     "build": "webpack --mode production",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -44,6 +48,9 @@
   "devDependencies": {
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
+    "postcss": "^8.4.14",
+    "postcss-loader": "^7.0.0",
+    "sass-loader": "^13.0.0",
     "webpack-dev-server": "^4.9.0"
   }
 }
