--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-loader": "^8.2.5",
     "bootstrap": "^5.1.3",
     "dotenv": "^16.0.1",
+    "gh-pages": "^4.0.0",
     "mini-css-extract-plugin": "^2.6.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
@@ -22,10 +23,11 @@
     "webpack-cli": "^4.9.2"
   },
   "scripts": {
-    "start": "webpack serve --config config/webpack.dev.js --env development --node-env development --mode development",
+    "start": "webpack serve --config config/webpack.dev.js --env development --node-env development --mode none",
     "build": "webpack --config config/webpack.prod.js --mode production",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d dist"
   },
   "eslintConfig": {
     "extends": [
