--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "bootstrap": "^5.1.3",
     "dotenv": "^16.0.1",
     "gh-pages": "^4.0.0",
+    "jquery": "^3.6.0",
     "mini-css-extract-plugin": "^2.6.0",
+    "popper.js": "^1.16.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
@@ -23,8 +25,11 @@
     "webpack": "^5.72.1",
     "webpack-cli": "^4.9.2"
   },
+  "overrides": {
+    "autoprefixer": "10.4.5"
+  },
   "scripts": {
-    "start": "webpack serve --config config/webpack.dev.js --env development --node-env development --mode none",
+    "start": "webpack serve --config config/webpack.dev.js --env development --node-env development --mode development",
     "build": "webpack --config config/webpack.prod.js --mode production",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
