--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.1",
+    "@types/node": "^17.0.36",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.5",
     "babel-loader": "^8.2.5",
     "bootstrap": "^5.1.3",
     "dotenv": "^16.0.1",
@@ -21,6 +25,7 @@
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
     "sass": "^1.52.1",
+    "typescript": "^4.7.2",
     "web-vitals": "^2.1.4",
     "webpack": "^5.72.1",
     "webpack-cli": "^4.9.2"
@@ -54,9 +59,12 @@
     ]
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.26.0",
+    "@typescript-eslint/parser": "^5.26.0",
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
     "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^4.0.0",
+    "eslint": "^8.16.0",
     "html-webpack-plugin": "^5.5.0",
     "postcss": "^8.4.14",
     "postcss-loader": "^7.0.0",
