--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,26 @@
     ],
     "extends": [
       "eslint:recommended",
-      "plugin:@typescript-eslint/eslint-recommended",
-      "plugin:@typescript-eslint/recommended"
-    ]
+      "plugin:@typescript-eslint/recommended",
+      "airbnb",
+      "plugin:import/typescript",
+      "plugin:prettier/recommended"
+    ],
+    "rules":  {
+      "react/jsx-filename-extension": [2, { "extensions": [".js", ".jsx", ".ts", ".tsx"] }],
+      "import/extensions": [
+        "error",
+        "ignorePackages",
+        {
+          "js": "never",
+          "jsx": "never",
+          "ts": "never",
+          "tsx": "never"
+        }
+     ]
+    },
+    "env": {
+      "browser": true,
+      "node": true
+    }
 }
