--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-loader": "^8.2.5",
     "bootstrap": "^5.1.3",
     "dotenv": "^16.0.1",
+    "eslint-config-airbnb": "^19.0.4",
     "gh-pages": "^4.0.0",
     "jquery": "^3.6.0",
     "mini-css-extract-plugin": "^2.6.0",
@@ -38,7 +39,9 @@
     "build": "webpack --config config/webpack.prod.js --mode production",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "eslint": "eslint src/**/*.tsx src/**.{ts,tsx,js,jsx}",
+    "eslint:fix": "eslint --fix src/**/*.tsx src/**.{ts,tsx,js,jsx}"
   },
   "eslintConfig": {
     "extends": [
@@ -65,11 +68,15 @@
     "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^4.0.0",
     "eslint": "^8.16.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "html-webpack-plugin": "^5.5.0",
     "postcss": "^8.4.14",
     "postcss-loader": "^7.0.0",
+    "prettier": "^2.6.2",
     "sass-loader": "^13.0.0",
     "terser-webpack-plugin": "^5.3.1",
+    "ts-loader": "^9.3.0",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-dev-server": "^4.9.0",
     "webpack-manifest-plugin": "^5.0.0",
