--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^5.1.3",
     "dotenv": "^16.0.1",
     "eslint-config-airbnb": "^19.0.4",
+    "formik": "^2.2.9",
     "gh-pages": "^4.0.0",
     "jquery": "^3.6.0",
     "mini-css-extract-plugin": "^2.6.0",
@@ -65,6 +66,7 @@
     "@typescript-eslint/eslint-plugin": "^5.26.0",
     "@typescript-eslint/parser": "^5.26.0",
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^4.0.0",
     "eslint": "^8.16.0",
@@ -74,6 +76,7 @@
     "postcss": "^8.4.14",
     "postcss-loader": "^7.0.0",
     "prettier": "^2.6.2",
+    "resolve-url-loader": "^5.0.0",
     "sass-loader": "^13.0.0",
     "terser-webpack-plugin": "^5.3.1",
     "ts-loader": "^9.3.0",
