--- a/.eslintrc
+++ b/.eslintrc
@@ -22,7 +22,11 @@
           "ts": "never",
           "tsx": "never"
         }
-     ]
+     ],
+     "react/function-component-definition": [2,{"namedComponents": "arrow-function" }],
+     "react/prop-types": "off",
+     "react/jsx-props-no-spreading": "off",
+     "react/destructuring-assignment": ["never"]
     },
     "env": {
       "browser": true,
