--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "typescript": "^4.7.2",
     "web-vitals": "^2.1.4",
     "webpack": "^5.72.1",
-    "webpack-cli": "^4.9.2"
+    "webpack-cli": "^4.9.2",
+    "yup": "^0.32.11"
   },
   "overrides": {
     "autoprefixer": "10.4.5"
